# CxxCrypt

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example1_aes_gcm_siv.cpp  example2_aes_gcm_siv.cpp
include/cxxcrypt/: aes_gcm_siv.hpp  cxxcrypt_core.hpp  cxxcrypt_rand.hpp  padding.hpp
src/: CMakeLists.txt  aes_core.hpp  aes_gcm_siv.cpp  aes_gcm_siv_core.hpp
tests/: CMakeLists.txt  test_aes_gcm_siv.cpp
